--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
 <div class="container">
-  <app-invoices-list></app-invoices-list>
+  <!-- <app-invoices-list></app-invoices-list> -->
+  <app-invoice-new></app-invoice-new>
 </div>
