--- a/src/app/components/invoices-list/invoices-list.component.html
+++ b/src/app/components/invoices-list/invoices-list.component.html
@@ -1,4 +1,4 @@
-<p class="h2">Invoices List</p>
+<p class="h2 mb-3">Invoices List</p>
 
 <div class="dropdown mb-3">
     <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-expanded="false">
