--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container">
   <!-- <app-invoices-list></app-invoices-list> -->
-  <app-invoice-new></app-invoice-new>
+  <!-- <app-invoice-new></app-invoice-new> -->
+  <app-invoice-preview></app-invoice-preview>
 </div>
