--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <div class="container">
   <!-- <app-invoices-list></app-invoices-list> -->
   <!-- <app-invoice-new></app-invoice-new> -->
-  <app-invoice-preview></app-invoice-preview>
+  <!-- <app-invoice-preview></app-invoice-preview> -->
+  <app-supplier-preview></app-supplier-preview>
 </div>
