--- a/src/app/components/invoice-new/invoice-new.component.html
+++ b/src/app/components/invoice-new/invoice-new.component.html
@@ -83,12 +83,12 @@
         <input 
             type="submit" 
             value="Save" 
-            class="btn btn-dark"
+            class="btn btn-primary m-1"
         />
         
         <button 
             type="button" 
-            class="btn btn-warning ml-2"
+            class="btn btn-dark m-1"
         >Cancel</button>
     </form>
 </div>
