--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,53 @@
-<nav class="navbar navbar-dark bg-dark mb-3">
+<!-- <nav class="navbar navbar-dark bg-dark mb-3">
     <div class="container">        
         <a href="/" class="navbar-brand">
             <i class="fa fa-address-card-o text-light mr-1 fa-lg"></i>
             Invoices-App
         </a>
     </div>
-</nav>
+</nav> -->
+
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+
+        <a class="navbar-brand" href="#">
+            <i class="fa fa-address-card-o text-light mr-1 fa-lg"></i>
+            Invoices-App
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">New Invoice</a>
+                </li>
+                
+            </ul>
+
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Current Role: <strong>Guest</strong></a>
+                </li>                
+            </ul>
+            
+            <ul class="navbar-nav ml-auto">                
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                        Roles
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Admin</a>
+                        <a class="dropdown-item" href="#">User</a>
+                        <a class="dropdown-item" href="#">Guest</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+    </nav>
