--- a/src/app/components/invoice-preview/invoice-preview.component.html
+++ b/src/app/components/invoice-preview/invoice-preview.component.html
@@ -5,12 +5,12 @@
         <h4 class="card-title">Invoice Data</h4>
     </div>
     <div class="card-body">
-      <h5 class="card-title">Number:</h5>
-      <p class="card-text">123</p>
-      
       <h5 class="card-title">Date:</h5>
       <p class="card-text">12/10/2022</p>
       
+      <h5 class="card-title">Number:</h5>
+      <p class="card-text">123</p>
+            
       <h5 class="card-title">Supplier:</h5>
       <p class="card-text">
           <strong>Name: </strong> <span>Some Company</span>
@@ -23,7 +23,10 @@
       <p class="card-text">$ 1230.00</p>
 
       
-      <button class="btn btn-primary">Close</button>
+      <button 
+        class="btn btn-primary"
+        routerLink="/"
+        >Close</button>
     </div>
   </div>
   
