--- a/src/app/components/invoices-list/invoices-list.component.html
+++ b/src/app/components/invoices-list/invoices-list.component.html
@@ -32,44 +32,36 @@
         <td>Zabka</td>
         <td>$124.54</td>
         <td>
-            <button class="btn btn-primary btn-sm m-1">see</button>
-            <button class="btn btn-secondary btn-sm m-1">details</button>
+          <button 
+            class="btn btn-primary btn-sm m-1"
+            routerLink="/invoices/1"
+          >invoice</button>
+          
+          <button 
+            class="btn btn-secondary btn-sm m-1"
+            routerLink="/suppliers/3"
+          >supplier</button>
         </td>
+        
       </tr>
 
       <tr>
         <th scope="row">1</th>
         <td>123-21</td>
-        <td>Zabka</td>
+        <td>Comarch</td>
         <td>$124.54</td>
         <td>
-            <button class="btn btn-primary btn-sm m-1">see</button>
-            <button class="btn btn-secondary btn-sm m-1">details</button>
+          <button 
+            class="btn btn-primary btn-sm m-1"
+            routerLink="/invoices/2"
+          >invoice</button>
+          
+          <button 
+            class="btn btn-secondary btn-sm m-1"
+            routerLink="/suppliers/1"
+          >supplier</button>
         </td>
+        
       </tr>
-
-      <tr>
-        <th scope="row">1</th>
-        <td>123-21</td>
-        <td>Zabka</td>
-        <td>$124.54</td>
-        <td>
-            <button class="btn btn-primary btn-sm m-1">see</button>
-            <button class="btn btn-secondary btn-sm m-1">details</button>
-        </td>
-      </tr>
-
-      <tr>
-        <th scope="row">1</th>
-        <td>123-21</td>
-        <td>Zabka</td>
-        <td>$124.54</td>
-        <td>
-            <button class="btn btn-primary btn-sm m-1">see</button>
-            <button class="btn btn-secondary btn-sm m-1">details</button>
-        </td>
-      </tr>
-
-
     </tbody>
   </table>
