--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
 <app-navbar></app-navbar>
 <div class="container">
-  <app-invoices-list></app-invoices-list>
-  <!-- <app-invoice-new></app-invoice-new> -->
-  <!-- <app-invoice-preview></app-invoice-preview> -->
-  <!-- <app-supplier-preview></app-supplier-preview> -->
-  <!-- <app-not-found></app-not-found> -->
+  <router-outlet></router-outlet>
 </div>
