--- a/src/app/components/invoice-new/invoice-new.component.html
+++ b/src/app/components/invoice-new/invoice-new.component.html
@@ -84,11 +84,13 @@
             type="submit" 
             value="Save" 
             class="btn btn-primary m-1"
+            routerLink="/"
         />
         
         <button 
             type="button" 
             class="btn btn-dark m-1"
+            routerLink="/"
         >Cancel</button>
     </form>
 </div>
