--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,7 +1,10 @@
-<div class="alert alert-danger" role="alert">
+<div class="alert alert-danger mt-3" role="alert">
     <h4 class="alert-heading">404 Page Not Found</h4>
     <p>The web page might be temporarily down or it may have moved permanently to a new web address.</p>
     <hr>
 
-    <button class="btn btn-danger">Home</button>
+    <button 
+      class="btn btn-danger"
+      routerLink="/"
+      >Home</button>
   </div>
