--- a/src/app/components/supplier-preview/supplier-preview.component.html
+++ b/src/app/components/supplier-preview/supplier-preview.component.html
@@ -44,9 +44,16 @@
                         >
                 </div>
 
-                <button class="btn btn-primary m-1">Close</button>
+                <button 
+                    class="btn btn-primary m-1"
+                    routerLink="/"
+                    >Close</button>
                 <button class="btn btn-dark m-1">Edit</button>
-                <button class="btn btn-secondary m-1">Save</button>
+                
+                <button 
+                    class="btn btn-secondary m-1"
+                    routerLink="/"
+                    >Save</button>
                 
             </form>
         </div>
