--- a/src/app/components/invoices-list/invoices-list.component.html
+++ b/src/app/components/invoices-list/invoices-list.component.html
@@ -17,17 +17,15 @@
 <table class="table">
     <thead class="thead-dark">
       <tr>
-        <th scope="col">#</th>
         <th scope="col">Invoice Number</th>
-        <th scope="col">Supplier Name</th>
-        <th scope="col">Invoice Amount</th>
-        <th scope="col">Action</th>
+        <th scope="col">Supplier</th>
+        <th scope="col">Amount</th>
+        <th scope="col">Actions</th>
       </tr>
     </thead>
     <tbody>
 
       <tr>
-        <th scope="row">1</th>
         <td>123-21</td>
         <td>Zabka</td>
         <td>$124.54</td>
@@ -46,7 +44,6 @@
       </tr>
 
       <tr>
-        <th scope="row">1</th>
         <td>123-21</td>
         <td>Comarch</td>
         <td>$124.54</td>
