--- a/src/app/components/invoices-list/invoices-list.component.html
+++ b/src/app/components/invoices-list/invoices-list.component.html
@@ -25,10 +25,10 @@
     </thead>
     <tbody>
 
-      <tr>
-        <td>123-21</td>
-        <td>Zabka</td>
-        <td>$124.54</td>
+      <tr *ngFor="let invoice of this.invoices">
+        <td>{{ this.invoice.number | slice:0:6}}...</td>
+        <td>{{ this.invoice.supplier.name }}</td>
+        <td>{{ this.invoice.amount | currency: 'GBP' }}</td>
         <td>
           <button 
             class="btn btn-primary btn-sm m-1"
@@ -38,24 +38,6 @@
           <button 
             class="btn btn-secondary btn-sm m-1"
             routerLink="/suppliers/3"
-          >supplier</button>
-        </td>
-        
-      </tr>
-
-      <tr>
-        <td>123-21</td>
-        <td>Comarch</td>
-        <td>$124.54</td>
-        <td>
-          <button 
-            class="btn btn-primary btn-sm m-1"
-            routerLink="/invoices/2"
-          >invoice</button>
-          
-          <button 
-            class="btn btn-secondary btn-sm m-1"
-            routerLink="/suppliers/1"
           >supplier</button>
         </td>
         
