add functionality to display single invoice

--- a/src/app/components/invoice-preview/invoice-preview.component.html
+++ b/src/app/components/invoice-preview/invoice-preview.component.html
@@ -20,7 +20,7 @@
       </p>
       
       <h5 class="card-title">Amount:</h5>
-      <p class="card-text">{{ this.invoice.amount | currency}}</p>
+      <p class="card-text">{{ this.invoice.amount | currency: 'GBP'}}</p>
 
       
       <button 
