--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,9 @@
                     <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
-                    <a class="nav-link" routerLink="/invoices/new">New Invoice</a>
+                    <a 
+                        *ngIf="onIsPermitedHighAccess()"
+                        class="nav-link" routerLink="/invoices/new">New Invoice</a>
                 </li>
                 
             </ul>
@@ -25,19 +27,6 @@
                     <span class="nav-link">Current Role: <strong>{{ this.currentRole }}</strong></span>
                 </li>                
             </ul>
-            
-            <!-- <ul class="navbar-nav ml-auto">                
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                        Roles
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Admin</a>
-                        <a class="dropdown-item" href="#">User</a>
-                        <a class="dropdown-item" href="#">Guest</a>
-                    </div>
-                </li>
-            </ul> -->
 
 
             <div id="dropdown">
