--- a/src/app/components/supplier-preview/supplier-preview.component.html
+++ b/src/app/components/supplier-preview/supplier-preview.component.html
@@ -1,6 +1,8 @@
 <p class="h2 mb-3">Supplier Preview</p>
 
-<div class="card">
+<div 
+    *ngIf="onIsPermitedHighAccess()"
+    class="card">
         <div class="card-header">
             <h4 class="card-title">Supplier Data</h4>
         </div>
@@ -50,9 +52,14 @@
                     class="btn btn-primary m-1"
                     routerLink="/"
                     >Close</button>
-                <button class="btn btn-dark m-1">Edit</button>
                 
                 <button 
+                    *ngIf="onIsPermitedLowAccess()"
+                    class="btn btn-dark m-1"
+                >Edit</button>
+                
+                <button 
+                    *ngIf="onIsPermitedLowAccess()"
                     class="btn btn-secondary m-1"
                     routerLink="/"
                     >Save</button>
@@ -61,3 +68,8 @@
         </div>
   </div>
 
+<div
+  *ngIf="!onIsPermitedHighAccess()"
+>
+<app-no-access></app-no-access>
+</div>
