fix bug when there are no provided data

--- a/src/app/components/invoices-list/invoices-list.component.html
+++ b/src/app/components/invoices-list/invoices-list.component.html
@@ -1,7 +1,8 @@
 <p class="h2 mb-3">Invoices List</p>
 
 
-<div 
+<div
+  *ngIf="this.suppliers.length > 0"
   id="dropdown" class="mb-3">
   <select 
     [disabled]="!onIsPermitedHighAccess()"
