fix bug with adding less than zero amount to new invoice

--- a/src/app/components/invoice-new/invoice-new.component.html
+++ b/src/app/components/invoice-new/invoice-new.component.html
@@ -50,6 +50,7 @@ class="card">
                     <label for="amount">Amount:</label>
                     <input 
                         type="number"
+                        min="0"
                         class="form-control"
                         name="amount"
                         [(ngModel)]="this.amount"
